hphp/hack/test/typecheck/nested_shapes_idx_hh_fixme.php.like_types.exp
File "nested_shapes_idx_hh_fixme.php", line 4, characters 28-45:
Invalid argument (Typing[4110])
File "Shapes.hhi", line 33, characters 35-44:
Some type constraint(s) are violated here
File "Shapes.hhi", line 33, characters 30-30:
T is a constrained type parameter
File "Shapes.hhi", line 33, characters 35-44:
Expected ~shape(...)
File "nested_shapes_idx_hh_fixme.php", line 4, characters 28-45:
But got null
